@@ -139,17 +139,6 @@ extern "C" {
 	int KSI_PKITruststore_verifyRawSignature(KSI_CTX *ctx, const unsigned char *data, size_t data_len, const char *algoOid, const unsigned char *signature, size_t signature_len, const KSI_PKICertificate *cert);
 
 	/**
-	 * Verifies PKI signature certificate constraints. This function can be used to explicitly verify
-	 * against certificate constraints of the publications file. If NULL is passed as \c certConstraints,
-	 * the verification is performed implicitly against context based certificate constraints.
-	 * \param[in]	pki				PKI Truststore.
-	 * \param[in]	signature		PKI signature object.
-	 * \param[in]	certConstraints	Array of OID and value pairs, terminated by a pair of NULLs.
-	 * \return status code (#KSI_OK, when operation succeeded, otherwise an error code).
-	 */
-	int KSI_PKITruststore_verifyCertificateConstraints(const KSI_PKITruststore *pki, const KSI_PKISignature *signature, KSI_CertConstraint * certConstraints);
-
-	/**
 	 * Function for verifying the data with PKI Signature.
 	 * \param[in]	pki			PKI Truststore.
 	 * \param[in]	data		Pointer to signed data.
@@ -159,7 +148,22 @@ extern "C" {
 	 * \return status code (\c #KSI_OK, when operation succeeded, otherwise an
 	 * error code).
 	 */
-	int KSI_PKITruststore_verifySignature(KSI_PKITruststore *pki, const unsigned char *data, size_t data_len, const KSI_PKISignature *signature);
+	KSI_FN_DEPRECATED(int KSI_PKITruststore_verifySignature(KSI_PKITruststore *pki, const unsigned char *data, size_t data_len, const KSI_PKISignature *signature));
+
+	/**
+	 * Function for verifying the data with PKI Signature. Explicitly verifies against publications file constraints
+	 * specified in \c certConstraints. If NULL is passed as \c certConstraints, verification is performed
+	 * implicitly against context based constraints.
+	 * \param[in]	pki				PKI Truststore.
+	 * \param[in]	data			Pointer to signed data.
+	 * \param[in]	data_len		Length of the signed data.
+	 * \param[in]	signature		PKI signature object.
+	 * \param[in]	certConstraints	PKI certificate constraints.
+	 *
+	 * \return status code (\c #KSI_OK, when operation succeeded, otherwise an
+	 * error code).
+	 */
+	int KSI_PKITruststore_verifyPKISignature(KSI_PKITruststore *pki, const unsigned char *data, size_t data_len, const KSI_PKISignature *signature, KSI_CertConstraint *certConstraints);
 
 	/**
 	 * Add trusted certificate lookup file.
