@@ -1,3 +1,4 @@
+* IMPROVEMENT: Certificate constraints can be set and verified per publications file.
 * IMPROVEMENT: Add preprocessor parseable version no.
 * IMPROVEMENT: KSI_receivePublicationsFile must not verify publications file automatically.
 * BUGFIX: Invalid and misleading exception message on response publication time check.
